# okbuck

./: README.md  WORKSPACE  dependencies.yaml
.circleci/: config.yml
another-app/: BUILD.bazel
buildSrc/src/main/groovy/com/uber/okbuck/experimental/bazel/: BazelAndroidBinaryRule.groovy  BazelAndroidLibraryRule.groovy  BazelJavaBinaryRule.groovy  BazelJavaLibraryRule.groovy  BuildFileGenerator.groovy
buildSrc/src/main/java/com/uber/okbuck/: OkBuckGradlePlugin.java
buildSrc/src/main/java/com/uber/okbuck/core/dependency/: DependencyCache.java  ExternalDependency.java
buildSrc/src/main/java/com/uber/okbuck/core/manager/: DependencyManager.java  GroovyManager.java  KotlinManager.java  LintManager.java  RobolectricManager.java  ScalaManager.java  TransformManager.java
buildSrc/src/main/java/com/uber/okbuck/core/model/base/: Scope.java
buildSrc/src/main/java/com/uber/okbuck/core/util/: ProguardUtil.java  ProjectUtil.java
buildSrc/src/main/java/com/uber/okbuck/extension/: WrapperExtension.java
buildSrc/src/main/java/com/uber/okbuck/wrapper/: BuckWrapperTask.java
buildSrc/src/main/rocker/com/uber/okbuck/template/config/: TransformBuckFile.rocker.raw
libraries/common/: BUILD.bazel
libraries/emptylibrary/: BUILD.bazel
libraries/javalibrary/: BUILD.bazel
libraries/parcelable/: BUILD.bazel
